# BetterInfoMods1

./: CMakeLists.txt  README.md  main.cpp  mod.json
.github/workflows/: build.yml
